--- a/w3schools/administrator.html
+++ b/w3schools/administrator.html
@@ -94,5 +94,6 @@ Takenlijst opstellen met deadline-->
     </main>
 </body>
 <script src="index.js"></script>
+<script src="myFirst.js"></script>
 
 </html>
